[EATON-673] FIX - List Components - Center resized image within the container.
The aspect ratio of the image within any list component should not affect the display and alignment of the List Cards with Images.
If the user uploads a 16:9 image we should crop the image to the center to maintain the aspect ratio of the container.

--- a/eaton.frontend/src/components/list/css/views/_view-featured-article.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-featured-article.scss
@@ -17,6 +17,16 @@
     }
   }
 
+  &__image {
+    position: relative;
+    padding-top: $ratio__16-9;
+
+    .rendition-bg {
+      background-position: center center;
+      background-size: auto 100%;
+    }
+  }
+
   &__title {
     font-family: $font-family__secondary;
     color: $color__primary-blue;
