--- a/eaton.frontend/src/global/css/_config/mixins/_mixins.scss
+++ b/eaton.frontend/src/global/css/_config/mixins/_mixins.scss
@@ -52,7 +52,8 @@ $base-size: $base__font-size;
 // EATON-474: Category Hero, Landing Hero - Semi-Transparent gradient should be applied on the whole image
 @mixin image-mask-gradient() {
   @include absolute-fill;
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 15%, rgba(0, 0, 0, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#bf000000',GradientType=0 );
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 15%,rgba(0,0,0,0.75) 100%);
 
   content: '';
   z-index: 2;
