--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/text/css/text.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/text/css/text.css
@@ -17,7 +17,6 @@
 
 @media screen and (max-width: 991px) { .eaton-text-statement__content { font-size: 2.3rem; line-height: 3rem; } }
 
-@media screen and (min-width: 992px) { .eaton-text-statement__content { font-size: 3.4rem; line-height: 5rem; max-width: 420px; }
-  .eaton-grid-control .eaton-text-statement__content { font-size: 2.3rem; line-height: 3rem; } }
+@media screen and (min-width: 992px) { .eaton-text-statement__content { font-size: 3.4rem; line-height: 6rem; max-width: 420px; } }
 
 @media screen and (min-width: 1200px) { .eaton-text-statement__content { max-width: 460px; } }
