--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
@@ -14,7 +14,7 @@
           <div class="col-xs-12 col-sm-5 col-lg-4 featured-story-component__blue ${componentList.odd ? 'featured-story-component__blue--right' : 'featured-story-component__blue--left'}">
             <div class="featured-story-component__content">
               <p class="featured-story-component__title b-eyebrow-large">${component.title}</p>
-              <a class="featured-story-component__link" href="${component.link}">
+              <a class="featured-story-component__link" href="${component.link.url}">
                 <h2 class="featured-story-component__text">${component.text}</i></h2>
               </a>
             </div>
