--- a/eaton.frontend/src/components/product-family-card/css/product-family-card.scss
+++ b/eaton.frontend/src/components/product-family-card/css/product-family-card.scss
@@ -37,6 +37,9 @@
   }
 
   &__links {
+
+    margin-top: 30px;
+
     a {
       display: block;
       margin-bottom: 10px;
@@ -76,6 +79,7 @@
     }
 
     &__links {
+      margin-top: 0;
       margin-bottom: 0;
 
       a {
