--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-family-card/css/product-family-card.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-family-card/css/product-family-card.css
@@ -23,6 +23,8 @@
 
 .eaton-product-family-card__cta { text-align: center; margin-bottom: 0; }
 
+.eaton-product-family-card__links { margin-top: 30px; }
+
 .eaton-product-family-card__links a { display: block; margin-bottom: 10px; }
 
 .eaton-product-family-card__links a:last-child { margin-bottom: 0; }
@@ -33,6 +35,6 @@
   .eaton-product-family-card__image-wrapper img { max-width: 360px; }
   .eaton-product-family-card__link-wrapper { margin-top: 60px; }
   .eaton-product-family-card__cta { text-align: left; }
-  .eaton-product-family-card__links { margin-bottom: 0; }
+  .eaton-product-family-card__links { margin-top: 0; margin-bottom: 0; }
   .eaton-product-family-card__links a { margin-bottom: 20px; }
   .eaton-product-family-card__links a:last-child { margin-bottom: 0; } }
