--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -64,6 +64,38 @@
         text-decoration: none;
       }
     }
+
+    span.download {
+      display: table-row;
+      margin-right: 15px;
+      &::after {
+        color: $color__white;
+        position: relative;
+        top: 1px;
+        content: "\EA07";
+        font-family: 'eaton-glyphicon';
+        display: inline;
+        font-size: 1.4rem;
+        padding-left: 7px;
+        text-decoration: none;
+      }
+    }
+
+    span.external {
+      display: table-row;
+      margin-right: 15px;
+      &::after {
+        color: $color__white;
+        position: relative;
+        top: 1px;
+        content: "\EA07";
+        font-family: 'eaton-glyphicon';
+        display: inline;
+        font-size: 1.4rem;
+        padding-left: 7px;
+        text-decoration: none;
+      }
+    }
   }
 
   &__list-icon {
@@ -73,20 +105,25 @@
   }
 
   &__external-icon {
-    padding-left: 10px;
     font-size: 2.8rem;
     margin-top: 8px;
+    display:table-cell;
+
+    &::before{
+      margin-right:15px;
+    }
 
     &.icon-link-external {
       margin-top: 0;
       top: 2px;
       position: relative;
+      display:table-cell;
     }
   }
 
   &__download-text {
     width: 100%;
-    // margin-left: 40px;
+    margin-left: 40px;
     font-size: 1.8rem;
     margin-top: -10px;
 
