--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -23,13 +23,23 @@
 
 .eaton-link-list-vertical__list-link span::after { color: #FFF; position: relative; top: 1px; content: "\EA07"; font-family: 'eaton-glyphicon'; display: inline; font-size: 1.4rem; padding-left: 7px; text-decoration: none; }
 
+.eaton-link-list-vertical__list-link span.download { display: table-row; margin-right: 15px; }
+
+.eaton-link-list-vertical__list-link span.download::after { color: #FFF; position: relative; top: 1px; content: "\EA07"; font-family: 'eaton-glyphicon'; display: inline; font-size: 1.4rem; padding-left: 7px; text-decoration: none; }
+
+.eaton-link-list-vertical__list-link span.external { display: table-row; margin-right: 15px; }
+
+.eaton-link-list-vertical__list-link span.external::after { color: #FFF; position: relative; top: 1px; content: "\EA07"; font-family: 'eaton-glyphicon'; display: inline; font-size: 1.4rem; padding-left: 7px; text-decoration: none; }
+
 .eaton-link-list-vertical__list-icon { padding-left: 10px; font-size: 2.8rem; padding-top: 5px; }
 
-.eaton-link-list-vertical__external-icon { padding-left: 10px; font-size: 2.8rem; margin-top: 8px; }
+.eaton-link-list-vertical__external-icon { font-size: 2.8rem; margin-top: 8px; display: table-cell; }
 
-.eaton-link-list-vertical__external-icon.icon-link-external { margin-top: 0; top: 2px; position: relative; }
+.eaton-link-list-vertical__external-icon::before { margin-right: 15px; }
 
-.eaton-link-list-vertical__download-text { width: 100%; font-size: 1.8rem; margin-top: -10px; }
+.eaton-link-list-vertical__external-icon.icon-link-external { margin-top: 0; top: 2px; position: relative; display: table-cell; }
+
+.eaton-link-list-vertical__download-text { width: 100%; margin-left: 40px; font-size: 1.8rem; margin-top: -10px; }
 
 .eaton-link-list-vertical__download-text--description { color: #98A4AE; font-family: Arial, "Arial", sans-serif; }
 
